--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -23,8 +23,33 @@
 		}
 	}
 
-# 判断若为手机则调用另外的css 
+# 判断若为手机则调用另外的css  (似乎不可用)
 	<!-[if AppleWebKit]>
 		<link rel="stylesheet" href="/css/mobile.css" 
 		type="text/css" media="screen" />
 	<![endif]->
+
+# 元素不透明度
+	opacity: 0.3   /* 0.3　的不透明度 */
+
+# 渐变
+	<style>
+		.toTopRight-deg2{
+			  background-image:-webkit-linear-gradient(-360deg, #000000, #007f00);
+			  background-image:linear-gradient(-360deg,#000000,#007f00);
+		}	
+		div {
+			width: 400px;
+			height: 150px;
+			border: 1px solid #666;
+		    line-height: 150px;
+			text-align: center;
+			font-weight: 900;
+			font-size: 30px;
+			color: #fff;
+			margin: 10px auto;
+		}
+	</style>
+	<div class="toTopRight-deg2">
+		;lkj;ljk
+	</div>
