--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -58,6 +58,12 @@
 	<div class="toTopRight-deg2">
 		;lkj;ljk
 	</div>
+# div下的img标签会出现白底,用以下方法解决
+
+	img {
+		display:block;
+	}
+
 # 将图层处于最底层
 	z-index:-1
 
