--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -12,121 +12,144 @@
 //			  @media (max-width:)
 // ======================================================================
 
-# web 
-	#流式布局重要教程
-		http://my.68design.net/29551/news/14587.html
-
-# 要适应手机端一定要在<head></head>内加上下面这一句
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-# 自适应高度
-	body {
-		padding:0px;
-		margin:0px;
-		height:100%;
-		overflow:hidden;
-		background-image:url(images/color.jpg);
-
-	}
 
 # 流式布局
-	@media (max-width: 619px) {
+	# web 
+		#流式布局重要教程
+			http://my.68design.net/29551/news/14587.html
 
-		#content img {
-			width:100%;
+	# 要适应手机端一定要在<head></head>内加上下面这一句
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+	# 语法
+		@media (max-width: 619px) {
+
+			#content img {
+				width:100%;
+				height:100%;
+				margin:auto;
+				padding-top:5px;
+			}
+		}
+	# 自适应高度
+		body {
+			padding:0px;
+			margin:0px;
 			height:100%;
-			margin:auto;
-			padding-top:5px;
+			overflow:hidden;
+			background-image:url(images/color.jpg);
+
 		}
-	}
-# 字体加粗
-	font-weight:100; /*  100-900表示大小 */
-# 图片交叠 good!!! ( important )
-	position:relative;
-	margin-top:-30%;
-# 文字向左滚动 
-	<marquee scrollamount="5" scrolldelay="0" direction="left">
-		恭喜ＸＸＸ获得ＸＸＸ奖品&nbsp&nbsp&nbsp&nbsp恭喜ＸＸＸ获得ＸＸＸ奖品
-		恭喜ＸＸＸ获得ＸＸＸ奖品&nbsp&nbsp&nbsp&nbsp恭喜ＸＸＸ获得ＸＸＸ奖品
-	</marquee>
-# 元素不透明度
-	opacity: 0.3   /* 0.3　的不透明度 */
-# 撑开div
-	.list {
-		overflow:hidden;
-		zoom:1;
-	}
+# 字体特效
+	# 字体加粗
+		font-weight:100; /*  100-900表示大小 */
+	# 文字向左滚动 
+		<marquee scrollamount="5" scrolldelay="0" direction="left">
+			恭喜ＸＸＸ获得ＸＸＸ奖品&nbsp&nbsp&nbsp&nbsp恭喜ＸＸＸ获得ＸＸＸ奖品
+			恭喜ＸＸＸ获得ＸＸＸ奖品&nbsp&nbsp&nbsp&nbsp恭喜ＸＸＸ获得ＸＸＸ奖品
+		</marquee>
+# 图片
 
-# 渐变
-	<!--
-	http://www.w3cplus.com/css3/new-css3-linear-gradient.html
-	-->
-	<style>
-		.toTopRight-deg2{
-			  background-image:-webkit-linear-gradient(-360deg, #000000, #007f00);
-			  background-image:linear-gradient(-360deg,#000000,#007f00);
-		}	
-		div {
-			width: 400px;
-			height: 150px;
-			border: 1px solid #666;
-		    line-height: 150px;
-			text-align: center;
-			font-weight: 900;
-			font-size: 30px;
-			color: #fff;
-			margin: 10px auto;
+	# 图片交叠 good!!! ( important )
+		position:relative;
+		margin-top:-30%;
+	#　去除 图片白边
+		# 方法1
+			img {
+				float:left;
+			}
+		# 方法2
+			div {
+				float:left;
+			}
+		# 方法3
+			div {
+				font-size:0;
+			}
+		# 方法4
+			img {
+				display:block;
+			}
+# div
+	# 撑开div
+		.list {
+			overflow:hidden;
+			zoom:1;
 		}
-	</style>
-	<div class="toTopRight-deg2">
-		;lkj;ljk
-	</div>
-# div下的img标签会出现白底,用以下方法解决
+# 方位
+	# 底部固定
+		<div class="expand">
+			<img src = "xxx.jpg" />
+		</div>
 
-	img {
-		display:block;
-	}
+		.expand {
+			bottom:0;
+			width:100%;
+			position:fixed;
+			z-index:9999;
+		}
+	# 将图层处于最底层
+		z-index:-1
 
-# 将图层处于最底层
-	z-index:-1
-# 每秒刷新一次
-	# html
-		<meta http-equiv="refresh" content="1"> 
-	# javascript
-	    <script language="JavaScript">
-		    function myrefresh() {
-				window.location.reload();
+
+# 整体特效
+			
+	# 元素不透明度
+		opacity: 0.3   /* 0.3　的不透明度 */
+
+	# 渐变
+		<!--
+		http://www.w3cplus.com/css3/new-css3-linear-gradient.html
+		-->
+		<style>
+			.toTopRight-deg2{
+				  background-image:-webkit-linear-gradient(-360deg, #000000, #007f00);
+				  background-image:linear-gradient(-360deg,#000000,#007f00);
+			}	
+			div {
+				width: 400px;
+				height: 150px;
+				border: 1px solid #666;
+				line-height: 150px;
+				text-align: center;
+				font-weight: 900;
+				font-size: 30px;
+				color: #fff;
+				margin: 10px auto;
 			}
-			setTimeout('myrefresh()',1000); //指定1秒刷新一次
-		</script> 
-# 页面自动跳转
-	#　html
-		meta http-equiv="refresh" content="20;url=http://maizilin.com">
-	# javascript
-		<script language="javascript">
-			function ChangeURL()
-			{
-				var url="http://maizilin.com";
-				location.href=url;
-			}
-		</script>
-# 底部固定
-	<div class="expand">
-		<img src = "xxx.jpg" />
-	</div>
+		</style>
+		<div class="toTopRight-deg2">
+			;lkj;ljk
+		</div>
 
-	.expand {
-		bottom:0;
-		width:100%;
-		position:fixed;
-		z-index:9999;
-	}
+	# 每秒刷新一次
+		# html
+			<meta http-equiv="refresh" content="1"> 
+		# javascript
+			<script language="JavaScript">
+				function myrefresh() {
+					window.location.reload();
+				}
+				setTimeout('myrefresh()',1000); //指定1秒刷新一次
+			</script> 
+	# 页面自动跳转
+		#　html
+			meta http-equiv="refresh" content="20;url=http://maizilin.com">
+		# javascript
+			<script language="javascript">
+				function ChangeURL()
+				{
+					var url="http://maizilin.com";
+					location.href=url;
+				}
+			</script>
 
-# 不要使用绝对高度和宽度
+# tips 
+	# 不要使用绝对高度和宽度
 
-# 字体尽量用em 
+	# 字体尽量用em 
 
-# 尽量每个div都定一个float:left ,width:xx%
+	# 尽量每个div都定一个float:left ,width:xx%
 
-# padding 和　margin也用 百分比,padding和margin也会占用width的百分数
+	# padding 和　margin也用 百分比,padding和margin也会占用width的百分数
 
 
