--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -151,5 +151,8 @@
 	# 尽量每个div都定一个float:left ,width:xx%
 
 	# padding 和　margin也用 百分比,padding和margin也会占用width的百分数
+# web
+	# 定位的一个相当好的例子
+		# http://j2eemx.com/class2u/blog/position_fixed_content.html
 
 
