add css 模板 ,效果web

--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -11,7 +11,12 @@
 // @ main     @media (min-width:)
 //			  @media (max-width:)
 // ======================================================================
+# 好看的html5效果网站
+	http://www.webhek.com/cat/show
 
+# html5流式框架(组件)
+	http://cnratchet.com/components/
+	
 
 # 流式布局
 	# web 
