--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -17,7 +17,8 @@
 # html5流式框架(组件)
 	http://cnratchet.com/components/
 	
-
+# 禁止某个标签出现蓝色焦点(区块) 
+	-webkit-tap-highlight-color:rgba(0,0,0,0) 
 # 流式布局
 	# web 
 		#流式布局重要教程
