--- a/other/css/css_note.css
+++ b/other/css/css_note.css
@@ -15,10 +15,15 @@
 	http://www.webhek.com/cat/show
 
 # html5流式框架(组件)
-	http://cnratchet.com/components/
+	# rachet (手机css框架)
+		http://cnratchet.com/components/
+	# sui mobile (手机css框架)
+		http://m.sui.taobao.org/
 	
 # 禁止某个标签出现蓝色焦点(区块) 
 	-webkit-tap-highlight-color:rgba(0,0,0,0) 
+# 手机端禁止图片长按
+	ontouchstart = "return false;"  # 为img标签添加这句
 # 流式布局
 	# web 
 		#流式布局重要教程
