--- a/web_plan/page/1_www_vimkid_com/static/vimkid/css/index.css
+++ b/web_plan/page/1_www_vimkid_com/static/vimkid/css/index.css
@@ -1,29 +1,103 @@
 /* 常规布局 */
 	body {background-color:#000000;margin:0;padding:0;} /* 去掉body 的默认白边 */
 		/*  头部样式 */
+		.top {
+			padding-top:20px;
+			padding-bottom:30px;
+		}
+		.tips {
+			color:#cccc99;
+			text-align:center;
+			font-size:0.8em;
+		}
 		#head {}
-			pre { letter-spacing: 0px; font-family: Courier New, Courier, monospace;
-					color: #007f00; background-color: transparent; font-size: 9px; 
-					line-height: 6px;text-align:center
-				}
+		pre { 
+			letter-spacing: 0px; 
+			font-family: Courier New, Courier, monospace;
+			color: #00ff00; 
+			background-color: transparent; 
+			font-size: 9px; 
+			line-height: 6px;
+			text-align:center;
+		}
+		/* 语言样式 */
+
 		/*  内容样式  */
-		#content {float:left;width:100%;clear:both;color:#bfbfbf}   /* 大内容样式 */
-			#contentLeft {width:30%; background-color:#000000;float:left;padding:auto;}
-				#leftin li {list-style-type:square;color:#cccc99;}   /* 左边li的样式 */
-				#leftin {padding:10px;}
-			#contentRight {width:70%; background-color:#000000;float:left;padding:auto;}
-				#rightin {padding:10px;border-left:1px solid #007f00}
-					#indexTitle {color:#007f00;text-align:center;border-bottom:1px solid #007f00;}
+		#content {
+			float:left; 
+			clear:both; 
+			color:#bfbfbf;
+			border:1px solid #002f00;
+			margin-top:15px;
+			margin-bottom:15px;
+			padding-top:10px;
+			padding-bottom:10px;
+			border-radius:15px;
+			margin-left:10px;
+			margin-right:10px;
+			width:96%;
+			background-color:#001100;
+		}  
+		.on {
+			background-color:#001100;
+		}
+		/* 大内容样式 */
+		#contentLeft {width:30%; background-color:#000000;float:left;padding:auto;}
+			/* 左边li的样式 */
+			#leftin li {
+				//list-style-type:square;
+				list-style-type:none;
+				color:#cccc99;
+				background-color:#002f00;
+				margin-top:3%;
+				padding:1.5%;
+				padding-left:8%;
+				border-radius:6px;
+			}  
+			#leftin { 
+				padding:10px; 
+				background-color:#001100;
+			}
+		#contentRight {width:70%; background-color:#000000;float:left;padding:auto;}
+			#rightin {
+				padding:10px;
+				//border-left:1px solid #007f00;
+				background-color:#001100;
+			}
+			#indexTitle { 
+				color:#007f00; 
+				text-align:center; 
+				border-bottom:1px solid #003f00; 
+			}
 
 		/* 脚部样式 */
-		#foot {}	
-			#copyright { color:#bfbfbf; text-align:center}
+		.foot {
+			float:left;
+			width:100%;
+		}	
 
 		/* 公共类样式　*/
-		.language {color:#bfbfbf;float:left;width:100%;}
+		.language {
+			color:#bfbfbf;
+			float:left;
+			width:97%;
+			padding-top:20px;
+			padding-left:10px;
+			padding-bottom:10px;
+		}
+		.languageType {
+			float:left;
+			padding-right:3%;
+		}
+
 		hr   {color:#007f00; float:left; width:100%;}
 		fontTitle {color:#cccc99;font-size:18px;}   /* 右边自定义标题头样式 */
-		.languageColor {color:#007f00}
+		.languageColor {
+			color:#007f00;
+			float:left;
+			width:100%;
+
+		}
 		.greenToDark {
 		  background-image:-webkit-linear-gradient(-360deg, #000000, #007f00);
 		  background-image:linear-gradient(-360deg,#000000,#007f00);
@@ -38,20 +112,45 @@
 		  opacity:0.25;
 		  position:absolute;
 		}
+		.copyRight {
+			padding:4%;
+			color:#bfbfbf;
+			font-size:0.8em;
+			text-align:center;
+			margin-top:10px;
+			padding-top:10px;
+		}
 
 /*分辨大于宽900px 时的布局*/
 	@media (min-width: 900px) {
 		#contentLeft {width:20%; background-color:#000000;float:left;margin:auto;}
 		#contentRight {width:80%; background-color:#000000;float:left;margin:auto;}
 	}
+	@media (min-width: 1150px) {
+		body {
+			margin-left:15%;
+			margin-right:15%;
+		}
+	}
 /*分辨小于宽550px 时的布局*/
 	@media (max-width: 550px) {
 		#contentLeft {width:100%; background-color:#000000;float:left;margin:auto;} /* 菜单宽度100%布局 */
 		#contentRight {width:100%; background-color:#000000;float:left;margin:auto;} 
-		#rightin {padding:10px;border-top:1px solid #007f00;border-left:none;}  /* 去掉左边的线,要去掉border-left */
+		/* 去掉左边的线,要去掉border-left */
+		#rightin {
+			padding:10px;
+			//border-top:1px solid #007f00;
+			border-left:none;
+		} 
+		/* 把头头改小,并左对齐 */
 		pre { letter-spacing: 0px; font-family: Courier New, Courier, monospace;
-				color: #007f00; background-color: #000000; font-size: 5px; 
-				line-height: 3px;text-align:left
-			} /* 把头头改小,并左对齐 */
+				color: #00ff00; background-color: #000000; font-size: 5px; 
+				line-height: 3px;text-align:center
+		} 
+		#content {
+			margin-left:2%;
+			margin-right:2%;
+			width:94%;
+		}
 	}
 
